--- a/draw/templates/draw/index.html
+++ b/draw/templates/draw/index.html
@@ -24,9 +24,15 @@
     var canvas = document.getElementById('myCanvas');
     paper.setup(canvas);
     var tool = new paper.Tool();
-    var path = new paper.Path();
+    
     var uid = Date.now() % 10000;
-    path.strokeColor = "red";
+    const map1 = new Map();
+    const queryString = window.location.search;
+    const urlParams = new URLSearchParams(queryString);
+    const size = urlParams.get('size');
+    var path = new paper.Path();
+    // used https://www.sitepoint.com/get-url-parameters-with-javascript/ to get these url parameters
+    
 
     // getting the URL (you may want to use for Exercise 3)
     var url = window.location.href;
@@ -36,14 +42,46 @@
 
     tool.onMouseMove = function(event) { //http://paperjs.org/reference/tool/ path examples
        path.add(event.point);
+       console.log("asd");
        // You may need to add code here if you want to pass any other information.
        socket.send("{\"x\" : " + event.point.x + ", \"y\" : " + event.point.y + ", \"uid\" : " + uid + "}" );
+       
+       
     }
 
     socket.onmessage = function(receivedMessage) {
         var received = JSON.parse(receivedMessage.data);
         console.log("Received: " + JSON.stringify(received));
         // You will probably want to add some code here to draw more lines.
+        if(size !== 'large') {
+            let str = JSON.stringify(received);
+            let userid = str.substring(str.lastIndexOf(":") + 1, str.length - 1);
+            let p = new paper.Point(parseInt(str.substring(str.indexOf(":") + 1, str.indexOf(","))), parseInt(str.substring(str.indexOf("y") + 3, str.lastIndexOf(","))));
+            if(uid == userid) {
+                if(map1.has(userid)) {
+                map1.get(userid).add(p);
+            } else {
+                var newPath = new paper.Path();
+                newPath.strokeColor = '#' + userid;
+                map1.set(userid, newPath);
+                
+            }  
+            }
+            
+        } else {
+            let str = JSON.stringify(received);
+            let userid = str.substring(str.lastIndexOf(":") + 1, str.length - 1);
+            let p = new paper.Point(parseInt(str.substring(str.indexOf(":") + 1, str.indexOf(","))), parseInt(str.substring(str.indexOf("y") + 3, str.lastIndexOf(","))));
+            
+            if(map1.has(userid)) {
+                map1.get(userid).add(p);
+            } else {
+                var newPath = new paper.Path();
+                newPath.strokeColor = '#' + userid;
+                map1.set(userid, newPath);
+                
+            }  
+        }
     }
 
     socket.onclose = function(e) {
