--- a/draw/templates/draw/big.html
+++ b/draw/templates/draw/big.html
@@ -11,6 +11,14 @@
     <script type="text/javascript" src="{% static 'draw/vendor/paper/paper-full.min.js' %}"></script>
 
     <style type="text/css">
+    .verticalLine {
+            width: 1px;
+            height: 600px;
+            background-color: black;
+            float: top;
+            margin-left: 350px;
+            margin-top: -90px;
+        }
     </style>
 
 </head>
