--- a/draw/templates/draw/big.html
+++ b/draw/templates/draw/big.html
@@ -1,100 +1,189 @@
-{% load static %}
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>P4 Drawing</title>
+<!doctype html>
+<html lang="en">
+  <head>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Hugo 0.84.0">
+    <title>Product example · Bootstrap v5.0</title>
 
-    <link rel="stylesheet" type="text/css" href="{% static 'draw/vendor/bootstrap/css/bootstrap.min.css' %}">
-    <script type="text/javascript" src="{% static 'draw/vendor/jquery/jquery-3.3.1.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'draw/vendor/paper/paper-full.min.js' %}"></script>
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/product/">
+    
+    
 
-    <style type="text/css">
-    .verticalLine {
-            width: 1px;
-            height: 600px;
-            background-color: black;
-            float: top;
-            margin-left: 350px;
-            margin-top: -90px;
+    <!-- Bootstrap core CSS -->
+<link href="/docs/5.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <!-- Favicons -->
+<link rel="apple-touch-icon" href="/docs/5.0/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
+<link rel="icon" href="/docs/5.0/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
+<link rel="icon" href="/docs/5.0/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
+<link rel="manifest" href="/docs/5.0/assets/img/favicons/manifest.json">
+<link rel="mask-icon" href="/docs/5.0/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
+<link rel="icon" href="/docs/5.0/assets/img/favicons/favicon.ico">
+<meta name="theme-color" content="#7952b3">
+
+
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+
+      .maestroLine {
+            height: 90px;
+            background-color: pink;
+            font-size:xx-large;
+        }
+
+        .navBar {
+            height:90px;
+        }
+
+        .navBar1Button {
+            height: 100px;
+            width: 100px;
+            margin-left: 20px;
+            margin-right: 20px;
+        }
+        .navBar2Button {
+            height: 100px;
+            width: 100px;
+            margin-left: 20px;
+            margin-right: 20px;
+        }
+        .navBar3Button {
+            height: 100px;
+            width: 100px;
+            margin-left: 20px;
+            margin-right: 20px;
+        }
+        .navBar4Button {
+            height: 100px;
+            width: 100px;
+            margin-left: 20px;
+            margin-right: 20px;
+        }
+
+        #navBarBox {
+            position: relative;
+            
+            height: 100px;
+            width: 100px;
+            background-color: lightblue;
+            display: none;
+        }
+
+        .musicSheetDiv {
+            overflow: hidden;
+            width: 1200px;
+        }
+
+        .musicSheetA {
+            margin-top: 90px;
+            margin-right: -300px;
+            padding-top: 0px;
+            padding-bottom: 0px;
         }
     </style>
 
-</head>
-<body>
-    <!-- You may change the dimensions of this canvas -->
-    <canvas id="myCanvas" width="750px" height="750px"></canvas>
-</body>
-<script>
-
-    // setting up the canvas and one paper tool
-    var canvas = document.getElementById('myCanvas');
-    paper.setup(canvas);
-    var tool = new paper.Tool();
     
-    var uid = Date.now() % 10000;
-    const map1 = new Map();
-    const queryString = window.location.search;
-    const urlParams = new URLSearchParams(queryString);
-    const size = urlParams.get('size');
-    var path = new paper.Path();
-    // used https://www.sitepoint.com/get-url-parameters-with-javascript/ to get these url parameters
+    <!-- Custom styles for this template -->
+    <link href="product.css" rel="stylesheet">
+  </head>
+  <body>
     
+<header class="site-header sticky-top py-1">
+  <div class="maestroLine container d-flex flex-column flex-md-row justify-content-between">
+        Maestro: Hit it!!
+  </div>
+</header>
 
-    // getting the URL (you may want to use for Exercise 3)
-    var url = window.location.href;
+<main>
 
-    var socket = new WebSocket(
-        'ws://' + window.location.host + '/ws/draw');
+  <figure class="half" style="display:flex">
+    <img style="width:1200px" height="1350px" src="https://drive.google.com/uc?export=view&id=1MiMuSVoV5TlGnM0_LDLF26HOsnPl5xpC">
+    <img style="width:1200px" height="1350px" src="seating-chart.jpg">
+</figure>
+</main>
 
-    tool.onMouseMove = function(event) { //http://paperjs.org/reference/tool/ path examples
-       path.add(event.point);
-       console.log("asd");
-       // You may need to add code here if you want to pass any other information.
-       socket.send("{\"x\" : " + event.point.x + ", \"y\" : " + event.point.y + ", \"uid\" : " + uid + "}" );
-       
-       
-    }
+<nav class="container">
+  <div class="row">
+    <div class="col col-md">
+        <button class="navBar1Button" id="muteButton1">
+            <i class="fas fa-microphone" id="mic"></i>
 
-    socket.onmessage = function(receivedMessage) {
-        var received = JSON.parse(receivedMessage.data);
-        console.log("Received: " + JSON.stringify(received));
-        // You will probably want to add some code here to draw more lines.
-        if(size !== 'large') {
-            let str = JSON.stringify(received);
-            let userid = str.substring(str.lastIndexOf(":") + 1, str.length - 1);
-            let p = new paper.Point(parseInt(str.substring(str.indexOf(":") + 1, str.indexOf(","))), parseInt(str.substring(str.indexOf("y") + 3, str.lastIndexOf(","))));
-            if(uid == userid) {
-                if(map1.has(userid)) {
-                map1.get(userid).add(p);
-            } else {
-                var newPath = new paper.Path();
-                newPath.strokeColor = '#' + userid;
-                map1.set(userid, newPath);
-                
-            }  
-            }
-            
-        } else {
-            let str = JSON.stringify(received);
-            let userid = str.substring(str.lastIndexOf(":") + 1, str.length - 1);
-            let p = new paper.Point(parseInt(str.substring(str.indexOf(":") + 1, str.indexOf(","))), parseInt(str.substring(str.indexOf("y") + 3, str.lastIndexOf(","))));
-            
-            if(map1.has(userid)) {
-                map1.get(userid).add(p);
-            } else {
-                var newPath = new paper.Path();
-                newPath.strokeColor = '#' + userid;
-                map1.set(userid, newPath);
-                
-            }  
-        }
-    }
+        </button>
+    </div>
+    <div class="col col-md">
+        <button class="navBar1Button" id="videoButton1">
+            <i class="fas fa-video" id="vid"></i>
+        </button>
+      
+    </div>
+    <div class="col col-md">
+        <button class="navBar1Button" id="chatButton1">
+            <i class="far fa-comment-dots"></i>
+        </button>
+      
+    </div>
+    <div class="col col-md">
+      <h5>Music Sheet</h5>
+      
+    </div>
+    <div class="col col-md">
+        <button class="navBar1Button" id="navBarBoxButton1">
+            <i class="fas fa-bars"></i>
+        </button>
+      
+    </div>
+  </div>
+</nav>
 
-    socket.onclose = function(e) {
-        console.error('Chat socket closed unexpectedly');
-    };
 
-</script>
+    <script src="/docs/5.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+        document.getElementById("muteButton1").addEventListener("click", function() {
+        $("#mic").toggleClass('fa-microphone fa-microphone-slash')
+    });
+    document.getElementById("videoButton1").addEventListener("click", function() {
+        $("#vid").toggleClass('fa-video fa-video-slash')
+    });
+    
+    document.getElementById("navigationBarNumber1").addEventListener("click", function() {
+        changeNavBar("1");
+        toggleVisibility("navBarBox")      
+    });
+    document.getElementById("navigationBarNumber2").addEventListener("click", function() {
+        changeNavBar("2");
+        toggleVisibility("navBarBox")      
+    });
+    document.getElementById("navigationBarNumber3").addEventListener("click", function() {
+        changeNavBar("3");
+        toggleVisibility("navBarBox")      
+    });
+    document.getElementById("navigationBarNumber4").addEventListener("click", function() {
+        changeNavBar("4");
+        toggleVisibility("navBarBox")      
+    })
+      
+    document.getElementById("navBarBoxButton4").addEventListener("click", function() {
+        toggleVisibility("navBarBox");      
+    });
+    
+    </script>
+
+      
+  </body>
 </html>
